Blender Game renderer Variance Shadow Maps (VSMs) broken. #42807

Closed
opened 2014-12-05 15:24:52 +01:00 by emilian huminiuc · 6 comments

System Information
Operating system and graphics card
Linux 3.17.4, nvidia 8800 gt with 340.58 drivers

Blender Version
Broken: 9f64a86436
Worked: 435eaa79b2

Short description of error
Since commit 9f64a86436 display of variance shadow maps is completely broken. Looks like the shadow buffer is filled with garbage

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Add a shadow casting lamp (spot or sun) to the scene. Switch renderer to Blender Game and switch shading mode to GLSL. Switch lamp shadow type to variance. Objects should cast shadows, instead there's garbage filling the area of the lamp frustum that intersects the objects in the scene (see attached .blend and screenshot)

VSM_bug.blend

VSM_broken.png

Thanks.

**System Information** Operating system and graphics card Linux 3.17.4, nvidia 8800 gt with 340.58 drivers **Blender Version** Broken: 9f64a8643683 Worked: 435eaa79b26c **Short description of error** Since commit 9f64a8643683 display of variance shadow maps is completely broken. Looks like the shadow buffer is filled with garbage **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Add a shadow casting lamp (spot or sun) to the scene. Switch renderer to Blender Game and switch shading mode to GLSL. Switch lamp shadow type to variance. Objects should cast shadows, instead there's garbage filling the area of the lamp frustum that intersects the objects in the scene (see attached .blend and screenshot) [VSM_bug.blend](https://archive.blender.org/developer/F129263/VSM_bug.blend) ![VSM_broken.png](https://archive.blender.org/developer/F129264/VSM_broken.png) Thanks.

Changed status to: 'Open'

Changed status to: 'Open'
Antonis Ryakiotakis was assigned by emilian huminiuc 2014-12-05 15:24:52 +01:00

Added subscriber: @emilian

Added subscriber: @emilian

This issue was referenced by e1e984e437

This issue was referenced by e1e984e437fc8fdf4a0fa1f8ec8fb64748c4ea28

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e1e984e437.

Closed by commit e1e984e437.

Confirm, looks ok.

Thanks

Confirm, looks ok. Thanks
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42807
No description provided.