Fix T42807, variance shadow map broken afterFBO changes.

This code was a bit do-it-yourself instead of relying on the API. Should
be OK now.